MINOR: use list.getLast()